# rq-api

./: CMakeLists.txt  README.md
source/: main.cpp
source/rq/: Bounds.cpp  Bounds.hpp  Context.cpp  Context.hpp  Point.hpp  Query.hpp  Record.hpp  Table.hpp  TableSchema.cpp  TableSchema.hpp  rq.hpp
source/rq/software/: SoftwareAnyTable.cpp  SoftwareAnyTable.hpp  SoftwareContext.cpp  SoftwareContext.hpp  SoftwareTable.cpp  SoftwareTable.hpp
